[workspace]
members = [
    "deaura-amm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Deaura Team"]
license = "NA"
https://github.com/deauraofficial/jup-metis-integration

[workspace.dependencies]
# Solana dependencies
# jupiter-amm-interface 0.6.0 requires solana-sdk ^2.3.1
solana-sdk = ">=2.3.1, <3.0"

# Jupiter dependencies
# Pin to exactly 0.6.0 to avoid pulling in Solana SDK 3.x from 0.6.1+
jupiter-amm-interface = "=0.6.0"

# SPL dependencies
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }

# Utilities
anyhow = "1.0"
rust_decimal = "1.33"

# Testing
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[workspace.profile.release]
overflow-checks = true
lto = true
codegen-units = 1

[workspace.profile.test]
overflow-checks = true
